--- a/css/shopping.css
+++ b/css/shopping.css
@@ -1,3 +1,72 @@
-#foodFieldset span {
-    display: block;
+table,
+td,
+th {
+    border: 1px solid black;
+    text-align: left;
+    padding: 10px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 100;
+    transition-duration: .1s;
+    transition: ease;
+}
+
+table {
+    width: 800px;
+    margin-left: 60px;
+    border-radius: 10px;
+    background-color: rgba(53, 132, 193, 0.297);
+    margin-bottom: 20px;
+}
+
+tr:hover {
+    background-color: aqua;
+    color: rgb(20, 20, 20);
+}
+
+th {
+    background-color: rgba(53, 132, 193, 0.817);
+}
+
+#inputbox {
+    margin-left: 60px;
+}
+
+.inputbutton {
+    margin-left: 60px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    background: #3D94F6;
+    background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: linear-gradient(to bottom, #3D94F6, #1E62D0);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    height: 30px;
+    line-height: 4px;
+    color: #FFFFFF;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 200px;
+    font-size: 14px;
+    font-weight: 100;
+    padding: 20px;
+    box-shadow: 3px 3px 14px 0px #3f3939;
+    -webkit-box-shadow: 3px 3px 14px 0px #000000;
+    -moz-box-shadow: 3px 3px 14px 0px #000000;
+    border: outset #FFFFFF 3px;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.inputbutton:hover {
+    background: #D0D0D0;
+    background-image: -webkit-linear-gradient(top, #D0D0D0, #1C4470);
+    background-image: -moz-linear-gradient(top, #D0D0D0, #1C4470);
+    background-image: -ms-linear-gradient(top, #D0D0D0, #1C4470);
+    background-image: -o-linear-gradient(top, #D0D0D0, #1C4470);
+    background-image: linear-gradient(to bottom, #D0D0D0, #1C4470);
+    text-decoration: none;
 }
