--- a/css/facts.css
+++ b/css/facts.css
@@ -1,23 +1,21 @@
 * {box-sizing: border-box;}
 
-.myFacts {display: none;}
+.myFact {
+  display: none;
+  width: 960px;
+}
 
 #fact-container {
   background-color: rgb(0, 0, 0);
   width: 100%;
+  /* width: 960px; */
   height: 60px;
   position: fixed;
   top: 68px;
   text-align: center;
 }
 
-.text {
-  color: #f2f2f2;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 7px;
-  width: 100%;
-}
+
 
 /* Fading animation */
 .fade {
