--- a/css/shopping.css
+++ b/css/shopping.css
@@ -1,6 +1,6 @@
-table,
-td,
-th {
+@import url('https://fonts.googleapis.com/css?family=Muli:200i,300&display=swap');
+
+table, td, th {
     border: 1px solid black;
     text-align: left;
     padding: 10px;
@@ -70,3 +70,20 @@ th {
     background-image: linear-gradient(to bottom, #D0D0D0, #1C4470);
     text-decoration: none;
 }
+
+h3, h2 {
+    font-family: 'Muli', sans-serif;
+    color: rgb(177, 219, 249);
+    margin-left: 60px;
+    padding-top: 25px;
+    font-size: 25px;
+}
+
+
+a {
+    text-decoration: none;
+    /* margin: 35px; */
+    font-size: 25px;
+    color: rgb(192, 209, 238);
+    border-bottom: 1px rgb(192, 209, 238) dashed;
+  }
