--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,6 @@ html {
   object-fit: fill;
 }
 
-/* #htmlstyle {
-  background-color: rgba(231, 231, 231, 0.451);
-} */
 #hero {
   -webkit-filter: drop-shadow(5px 5px 5px #222);
   filter: drop-shadow(5px 5px 5px #222);
@@ -28,7 +25,6 @@ html {
 }
 
 #herotext {
-  /* background-color: rgba(231, 231, 231, 0.451); */
   text-align: center;
   font-size: 70px;
   /* font-family: Georgia, 'Times New Roman', Times, serif; */
@@ -45,12 +41,9 @@ html {
   font-size: 40px;
 }
 
-
-
 body {
   margin-left: auto;
   margin-right:auto;
-  
 }
 
 nav {
@@ -123,3 +116,12 @@ h3 {
   margin-left: auto;
   margin-right: auto;
 }
+
+/* background-color: rgb(0, 0, 0);
+width: 60%;
+/* width: 960px; */
+height: 60px;
+position: relative;
+/* top: 68px; */
+text-align: center;
+margin: auto; */
