--- a/css/style.css
+++ b/css/style.css
@@ -1,114 +1,129 @@
-    @media print {
-        h2,
-        h1,
-        nav,
-        iframe,
-        h3,
-        button {
-            display: none;
-        }
+@media print {
+    h2,
+    h1,
+    nav,
+    iframe,
+    h3,
+    button {
+        display: none;
     }
-    
-    html {
-        background: url(../img/vector.jpg) no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        margin-top: 100px;
-        object-fit: fill;
-    }
-    
-    #hero {
-        -webkit-filter: drop-shadow(5px 5px 5px #222);
-        filter: drop-shadow(5px 5px 5px #222);
-        width: 30em;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 5%;
-        /* background-color:rgba(204, 203, 203, 0.507); */
-    }
-    
-    #hero {
-        -webkit-filter: drop-shadow(5px 5px 5px #222);
-        filter: drop-shadow(5px 5px 5px #222);
-        width: 300px;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 5%;
-    }
-    
-    #herotext {
-        text-align: center;
-        font-size: 70px;
-        /* font-family: Georgia, 'Times New Roman', Times, serif; */
-        font-family: 'Marcellus SC', serif;
-        color: rgb(0, 0, 0);
-        -webkit-filter: drop-shadow(5px 5px 7px rgb(212, 212, 212));
-        filter: drop-shadow(5px 5px 7px rgb(212, 212, 212));
-        font-weight: bold;
-        margin: auto;
-        width: 970px;
-    }
-    
-    #herotext h4 {
-        font-size: 40px;
-    }
-    
-    body {
-        margin-left: auto;
-        margin-right: auto;
-    }
-    
-    nav {
-        background-color: rgb(0, 0, 0);
-        overflow: hidden;
-        margin-bottom: 30px;
-        width: 100%;
-        /* padding: .85em; */
-        position: fixed;
-        top: 0;
-        text-align: center;
-    }
-    
-    nav ul {
-        text-align: center;
-        display: inline-block;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-weight: 100;
-        text-transform: uppercase;
-        font-size: 25px;
-        padding: 15px;
-        /* transition: .5s; */
-        position: sticky;
-    }
-    
-    nav li {
-        text-align: center;
-        display: inline-block;
-        font-size: 25px;
-        padding: 15px;
-    }
-    
-    .text {
-        color: #f2f2f2;
-        padding: 8px 12px;
-        bottom: 7px;
-        width: 960px;
-        display: inline-block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    /* background-color: rgb(0, 0, 0);
-width: 60%;
-/* width: 960px; */
-    
-    height: 60px;
-    position: relative;
-    /* top: 68px; */
-    
+}
+
+html {
+    background: url(../img/vector.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    margin-top: 100px;
+    object-fit: fill;
+}
+
+#hero {
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+    filter: drop-shadow(5px 5px 5px #222);
+    width: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+    padding-top: 2em;
+}
+
+#herotext {
     text-align: center;
+    font-size: 70px;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
+    font-family: 'Marcellus SC', serif;
+    color: rgb(188, 202, 216);
+    -webkit-filter: drop-shadow(5px 5px 4px rgb(0, 0, 0));
+    filter: drop-shadow(5px 5px 4px rgb(0, 0, 0));
+    font-weight: bold;
     margin: auto;
-    */
+    width: 970px;
+    padding: 10px;
+}
+
+#herotext h4 {
+    font-size: 40px;
+    padding-bottom: 1.5em;
+}
+
+body {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+nav {
+    background-color: rgb(0, 0, 0);
+    overflow: hidden;
+    margin-bottom: 30px;
+    width: 100%;
+    /* padding: .85em; */
+    position: fixed;
+    top: 0;
+    text-align: center;
+}
+
+nav ul {
+    text-align: center;
+    display: inline-block;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 100;
+    text-transform: uppercase;
+    font-size: 25px;
+    padding: 15px;
+    /* transition: .5s; */
+    position: sticky;
+}
+
+nav li {
+    text-align: center;
+    display: inline-block;
+    font-size: 25px;
+    padding: 15px;
+}
+
+nav a {
+    text-decoration: none;
+    color: rgb(185, 185, 185);
+    vertical-align: 15px;
+}
+
+nav ul :hover {
+    transition-property: color;
+    transition-duration: 0.4s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+    color: rgb(249, 251, 252);
+}
+
+nav img {
+    width: 50px;
+    height: 50px;
+}
+
+main {
+    width: 960px;
+    margin: auto;
+    font-size: 25px;
+    background-color: rgba(0, 0, 0, 0.619);
+    color: rgb(197, 201, 199);
+    line-height: 1.3;
+}
+
+h3 {
+    color: rgb(123, 165, 170);
+    font-size: 1.5em;
+}
+
+.text {
+    font-family: sans-serif;
+    color: #f2f2f2;
+    padding: 8px 12px;
+    bottom: 7px;
+    width: 960px;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+}
