--- a/css/facts.css
+++ b/css/facts.css
@@ -1,43 +1,57 @@
-* {box-sizing: border-box;}
+* {
+    box-sizing: border-box;
+}
 
 .myFact {
-  display: none;
-  width: 960px;
+    display: none;
+    width: 960px;
 }
 
 #fact-container {
-  background-color: rgb(0, 0, 0);
-  width: 100%;
-  /* width: 960px; */
-  height: 60px;
-  position: relative;
-  /* top: 68px; */
-  text-align: center;
-  margin: auto;
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    /* width: 960px; */
+    height: 60px;
+    position: relative;
+    /* top: 68px; */
+    text-align: center;
+    margin: auto;
 }
-
 
 
 /* Fading animation */
+
 .fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-  margin: auto;
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+    margin: auto;
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
 
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
 
+
 /* On smaller screens, decrease text size */
+
 @media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
+    .text {
+        font-size: 11px
+    }
 }
