--- a/css/locations.css
+++ b/css/locations.css
@@ -1,5 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Istok+Web&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Muli:200i,300&display=swap');
+
+@media print {
+  h2,
+  h1,
+  nav,
+  iframe,
+  h3,
+  button,
+  #fact-container {
+     display: none;
+    }
+}
+
 #locations-main {
     width: 1400px;
 }
@@ -9,11 +22,61 @@
     display: none;
 }
 
+#zip-input {
+  height: 25px;
+  width: 160px;
+  margin: 10px;
+}
+#zip-submit {
+  width: 100px;
+  display: inline-block;
+}
+
+.button {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    background: #3D94F6;
+    background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: linear-gradient(to bottom, #3D94F6, #1E62D0);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    height: 10px;
+    line-height: 4px;
+    color: #FFFFFF;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 170px;
+    font-size: 14px;
+    font-weight: 100;
+    padding: 10px;
+    padding-bottom: 14px;
+    box-shadow: 3px 3px 14px 0px #3f3939;
+    -webkit-box-shadow: 3px 3px 14px 0px #000000;
+    -moz-box-shadow: 3px 3px 14px 0px #000000;
+    border: outset #FFFFFF 3px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 #pick-zip {
     text-align: center;
     display: inline-block;
     vertical-align: top;
     margin: 25px;
+}
+
+#invalid-alert {
+  font-family: 'Muli', sans-serif;
+  font-weight: 100;
+  font-size: 16px;
+  color: rgb(225, 44, 31);
+}
+
+#input-box {
+text-align: center;
 }
 
 h1 {
@@ -28,7 +91,6 @@ h1 {
     margin-right: auto;
     width: 640px;
 }
-
 
 /* in renderAllLocations function, change j to i */
 
