--- a/css/locations.css
+++ b/css/locations.css
@@ -1,17 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Istok+Web&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Muli:200i,300&display=swap');
-
 @media print {
-  h2,
-  h1,
-  nav,
-  iframe,
-  h3,
-  button,
-  #fact-container,
-  .button
-      {
-     display: none;
+    h2,
+    h1,
+    nav,
+    iframe,
+    h3,
+    button,
+    #fact-container,
+    .button {
+        display: none;
     }
 }
 
@@ -25,13 +23,14 @@
 }
 
 #zip-input {
-  height: 25px;
-  width: 160px;
-  margin: 10px;
+    height: 25px;
+    width: 160px;
+    margin: 10px;
 }
+
 #zip-submit {
-  width: 100px;
-  display: inline-block;
+    width: 100px;
+    display: inline-block;
 }
 
 .button {
@@ -71,14 +70,18 @@
 }
 
 #invalid-alert {
-  font-family: 'Muli', sans-serif;
-  font-weight: 100;
-  font-size: 16px;
-  color: rgb(225, 44, 31);
+    font-family: 'Muli', sans-serif;
+    font-weight: 100;
+    font-size: 16px;
+    background-color: beige;
+    color: rgb(225, 44, 31);
+    width: 300px;
+    text-align: center;
+    margin-left: 100px;
 }
 
 #input-box {
-text-align: center;
+    text-align: center;
 }
 
 h1 {
