--- a/css/shopping.css
+++ b/css/shopping.css
@@ -15,7 +15,7 @@ table {
     width: 800px;
     margin-left: 60px;
     border-radius: 10px;
-    background-color: rgba(53, 132, 193, 0.297);
+    background-color: rgba(53, 132, 193, 0.591);
     margin-bottom: 20px;
 }
 
@@ -28,10 +28,22 @@ th {
     background-color: rgba(53, 132, 193, 0.817);
 }
 
+margin-left: 60px;
+
+}
+input {
+    width: 20px;
+    height: 20px;
+}
 #inputbox {
     margin-left: 60px;
+    width: 200px;
+    height: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 22px;
+    font-weight: 150;
+    text-align: right;
 }
-
 .inputbutton {
     margin-left: 60px;
     margin-bottom: 30px;
@@ -61,7 +73,6 @@ th {
     display: inline-block;
     cursor: pointer;
 }
-
 .inputbutton:hover {
     background: #D0D0D0;
     background-image: -webkit-linear-gradient(top, #D0D0D0, #1C4470);
@@ -71,7 +82,6 @@ th {
     background-image: linear-gradient(to bottom, #D0D0D0, #1C4470);
     text-decoration: none;
 }
-
 h3,
 h2 {
     font-family: 'Muli', sans-serif;
@@ -80,10 +90,10 @@ h2 {
     margin-left: 60px;
     padding-top: 25px;
 }
-
 main a {
     text-decoration: none;
     /* margin: 35px; */
+    
     font-size: 25px;
     color: rgb(192, 209, 238);
     border-bottom: 1px rgb(192, 209, 238) dashed;
