--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ html {
     margin: auto;
     width: 970px;
     padding: 10px;
+    line-height: 1;
 }
 
 #herotext h4 {
@@ -49,9 +50,14 @@ html {
     padding-bottom: 1.5em;
 }
 
+h1 {
+    margin-bottom: 20px;
+}
+
 body {
     margin-left: auto;
     margin-right: auto;
+    margin-top: 100px;
 }
 
 nav {
@@ -75,6 +81,7 @@ nav ul {
     padding: 15px;
     /* transition: .5s; */
     position: sticky;
+    letter-spacing: 1px;
 }
 
 nav li {
@@ -119,9 +126,10 @@ h3 {
 
 .text {
     font-family: sans-serif;
+    font-size: 18px;
+    font-weight: 100;
     color: #f2f2f2;
-    padding: 8px 12px;
-    bottom: 7px;
+    padding: 8px 8px;
     width: 960px;
     display: inline-block;
     margin-left: auto;
